Sat Jun 19 05:40:07 1999  Philip Blundell <pb@nexus.co.uk>

	* arm.c (arm_reload_in_hi): Invert sense of test on BYTES_BIG_ENDIAN.

Sat Jun 19 05:25:05 1999  Richard Earnshaw (rearnsha@arm.com)

	* arm.h (CONDITIONAL_REGISTER_USAGE): If flag_pic, never use
	PIC_OFFSET_TABLE_REGNUM for general alloaction.
	(INITIAL_ELIMINATION_OFFSET): Count the fact that the PIC register
	must be stacked if it is used for PIC accesses.
	* arm.c (use_return_insn): Handle PIC register specially.
	(output_return_instruction): Likewise.
	(output_func_{prologue,epilogue}): Likewise.
	(output_expand_prologue): Likewise.

	* arm.md (*adddf_esfdf_df): Renamed from *adddf_df_esfdf.
	(*strsi_predec): Renamed from *strqi_predec.
	(*loadsi_shiftpreinc): Renamed from *loadqi_shiftpreinc.
	(*loadsi_shiftpredec): Renamed from *loadqi_shiftpredec.

	* arm.c (arm_override_options): Remove warning about PIC code
	not being supported.

Fri Jun 18 23:47:06 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (find_addr_reg): New function.
	* rs6000.h (find_addr_reg): Declare.
	(offsettable_addr_operand): Delete.
	* rs6000.md (movdf_hardfloat32): Handle non-offsettable loads
	from and stores to GPRs.

Fri Jun 18 15:44:18 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.c (alpha_expand_block_move): Use get_insns rather than
	gen_sequence as argument to emit_no_conflict_block.

Fri Jun 18 07:02 1999  Bruce Korb <ddsinc09@ix.netcom.com>

	* fixinc/mkfixinc.sh: enable the fixincl program for DG/UX
	* fixinc/inclhack.def(dgux_int_varargs): script must end with \n
	*fixinc/fixincl.x: regen
	*fixinc/inclhack.sh: regen

Thu Jun 17 15:06:10 PDT 1999 Don Lindsay  <dlindsay@cygnus.com>

        * added support for -mpcrel (PC relative addressing for m68k) 
	based on code done by Michael Tiemann  <tiemann@axon.cygnus.com>.
	* invoke.texi (m68000 options): Add documentation for -mpcrel flag.
	* m68k.c (print_operand_address): Handle 32-bit PIC case.
	(comments for general_src_operand): Add some explanation